--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
 body {
     background-color: black;
     color: #fff;
@@ -13,7 +12,7 @@ main {
     background-image: url('/img/bg.jpg');
     background-size: 100%;
     background-size: max(1000px, 100vw);
-    height: 80vh;
+    height: 100vh;
     width: auto;
 }
 
@@ -218,7 +217,9 @@ input::placeholder {
     color: white;
     padding: 34px;
     text-align: center;
+    
 }
+
 
 .cont4 h1 {
     text-align: center;
@@ -226,8 +227,8 @@ input::placeholder {
 }
 
 .mini-cont {
-    transition: all 1s ease-out;
-    font-size: 24px;
+    /* transition: all 1s ease-out; */
+    font-size: 1rem;
     display: flex;
     justify-content: space-between;
     background-color: #2d2d2db5;
@@ -236,14 +237,25 @@ input::placeholder {
     max-width: 50vw;
     margin: 34px auto;
     cursor: pointer;
+    transition: transform 1s ease;
 }
+.mini-cont img{
+  filter: invert(1);
+}
+
+.mini-cont:hover {
+    transform: scale(1.1); /* Scales the element by 10% */
+   
+  }
 
 .cont4 p {
     padding-bottom: 30px;
 }
 
 .cont4-mail {
-    gap: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .cont4-mail input {
@@ -303,7 +315,6 @@ footer .questions {
 
     .nav {
         display: flex;
-        /* justify-content: space-between; */
         align-items: center;
 
     }
@@ -398,6 +409,22 @@ footer .questions {
 
     .cont3 img {
         width: 60vw;
+    }
+    .mini-cont{
+       font-size: 13px;
+    }
+    .cont4-mail{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .cont4-mail button {
+       
+        padding: 20px 30px;
+        border-radius: 50px;
+        max-width: 50%;
+        border: none;
+        font-size: 15px;
     }
 
     .footer {
