--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ main .box {
 .login .lang {
     display: flex;
     align-items: center;
-    padding: 4px 5px;
+    padding: 2px 0px 2px 8px ;
     height: 23px;
     width: 90px;
     border-radius: 10px;
@@ -66,6 +66,7 @@ main .box {
     font-weight: 600;
     border: 0px;
     font-size: 17px;
+    cursor: pointer;
     outline: none;
 }
 
